  LoLA; for each file `userconfig.H.xxx' in directory `src/configs' exists a
  Makefile target `lola-xxx' which compiles LoLA with that configuration

* added Makefile target `all-configs' to compile all configurations in
  directory `src/configs'

* added maintainer scripts to create source and binary releases; the latter
  contain binaries of all configurations in directory `src/configs'

Version 1.10
============

* this is an official source release by Karsten Wolf - removed warning after
  executing the configure script

* added a generic Doxygen (`http://www.doxygen.org') configuration file
  `Doxyfile.in'

* completed task #6267 (`http://gna.org/task/?626'): `TWOPHASE' is only set
  when it makes sense, i.e. only in `LIVEPROP' and `HOME'

* actually using command line parameters (`--enable-win32', `--enable-64bit',
  and `--enable-universal') from the configure script

Version 1.03
============

* fixed bug #12302 (`https://gna.org/bugs/?12302'): LoLA: Exit Codes in
  `MODELCHECKING': LoLA now returns the result via the `_exit' command

* added directory `patches' collecting some unpublished adjustments

* fixed bug #12063 (`https://gna.org/bugs/?12063'): `LIVEPROP' now works
  without crashing

* added a test case `umlprocess' to avoid regression of bug #12063
  (`https://gna.org/bugs/?12063')

* out-commented `TWOPHASE' in `userconfig.H' for liveprop test

* fixed bug #12061 (`https://gna.org/bugs/?12061'): `BOUNDEDNET' now works
  without crashing

* added a test case `unbounded' to avoid regression of bug #12061
  (`https://gna.org/bugs/?12061')

* updated the documentation - integrated first parts of
  `http://wwwteo.informatik.uni-rostock.de/ls_tpp/lola/'

* the files `ChangeLog' and `NEWS' are now generated from the file
  `doc/ChangeLog.texi' as it is done in Rachel or BPEL2oWFN

* renamed Makefile target `cvs-clean' to `svn-clean'

* tidied the configure script and removed unnecessary checks
