@@ -33,6 +33,13 @@ Version 1.11-unreleased
 * added maintainer scripts to create source and binary releases; the latter
   contain binaries of all configurations in directory `src/configs'
 
+* added a directory `utils' for small helper tools:
+     * `graph2dot' creates a graphical representation of a reachability graph
+       created by LoLA (e.g., when configured with mode `FULL')
+
+     * `path2graph' translates a path created by LoLA (e.g., when configured
+       with mode `DEADLOCK') into a reachability graph
+
 
 See file ChangeLog <http://service-technology.org/files/lola/ChangeLog> for
 complete version history.
